# aind-pydantic-codegen

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/aind-pydantic-codegen/: __init__.py
src/aind_pydantic_codegen/: formatters.py  generators.py  helpers.py  validators.py
tests/: __init__.py  test_helpers.py  test_literal_model_blueprint.py  test_mock_data_source.py  test_model_generator.py
